# a3-modupdater

./: .gitignore  README.en.md  README.md  modupdater.example.en.toml  modupdater.example.toml  modupdater.global.toml  modupdater.spec  modupdater.toml  pyproject.toml
modupdater/: __init__.py  cli.py  config.py  linkmanager.py  logging_utils.py  parser_html.py  robocopy.py  steamcmd.py  utils.py  workflow.py
scripts/: build_exe.ps1  build_pyz.ps1  build_pyz.py
